--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <main>
         <section id="intro">
             <video autoplay muted loop>
-                <source src="/video/bamboo-intro-video.mp4" type="video/mp4">
+                <source src="./video/bamboo-intro-video-2.mp4" type="video/mp4">
                 <p>Votre navigateur ne prend pas en charge les vidéos HTML5.</p>
-              </video>
-              <div class="center-container">
+            </video>
+            <div class="center-container">
                 <p>日出ずる国への旅</p>
-              </div>
+            </div>
         </section>
         <section id="presentation">
             <h1>Voyage au Pays du Soleil Levant</h1>
