--- a/index.html
+++ b/index.html
@@ -57,10 +57,26 @@
             </div>
         </section>
         <section id="presentation">
-            <h1>Voyage au Pays du Soleil Levant</h1>
+            
+            <!-- <h1>Voyage au Pays du Soleil Levant</h1> -->
             <div class="flex-container">
-                <div id="red-circle">
-                    <!-- <div id="japan-country"></div> -->
+                <div id="top-left-lines"></div>
+                <div id="left-geisha-image">
+                    <img src="./img/geisha.png" alt="Geisha in red circle" title="Geisha in red circle" />
+                </div>
+                <div id="seven-bushido-virtues">Les sept vertus du Samourai</div>
+                <div id="circled-text">
+                    <span class="char1">義</span> <!-- Gi : Rectitude -->
+                    <span class="char2">勇</span> <!-- Yū : Courage -->
+                    <span class="char3">仁</span> <!-- Jin : Miséricorde -->
+                    <span class="char4">禮</span> <!-- Rei : Respect -->
+                    <span class="char5">誠</span> <!-- Makoto : Honnêteté -->
+                    <span class="char6">名誉</span> <!-- Meiyo : Honneur -->
+                    <span class="char7">忠義</span> <!-- Chūgi : Loyauté -->
+                </div>
+                <div id="bottom-right-lines"></div>
+                <div id="right-samurai-image">
+                    <img src="./img/samurai.png" alt="Samurai in red circle" title="Samurai in red circle" />
                 </div>
             </div>
         </section>
